--- a/src/app/components/admin/admin-user/admin-user.component.html
+++ b/src/app/components/admin/admin-user/admin-user.component.html
@@ -1,10 +1,15 @@
 <h2>Users</h2>
-
-<div class="row">
-    <div class="col-md-7 ml-1">
-        <router-outlet></router-outlet>
-    </div>
-    <div class="col-md-auto">
-        <p>Click user to edit</p>
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-md-6">
+            <p>Click user to edit, or
+                <button class="btn btn-outline-primary btn-sm"
+                        [routerLink]="['new']">Add New User
+                </button>
+            </p>
+        </div>
+        <div class="col-md-6">
+            <router-outlet></router-outlet>
+        </div>
     </div>
 </div>
