--- a/src/app/components/admin/admin-user/admin-user-item/admin-user-item.component.html
+++ b/src/app/components/admin/admin-user/admin-user-item/admin-user-item.component.html
@@ -1,5 +1,5 @@
 <a class="list-group-item d-flex justify-content-between align-items-center list-group-item-action users"
-   [routerLink]="['/users/', user.uid]">
+   [routerLink]="['/admin/users/', user.uid]">
     <img [src]="user.photoURL"
          [alt]="user.displayName"
          class="profile-image">
