--- a/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
+++ b/src/app/components/admin/admin-user/admin-user-new/admin-user-new.component.html
@@ -76,11 +76,11 @@
     </p>
 
     <!-- * Debugging * -->
-    <code>
-        <pre>Form value: {{ newUserForm.value | json }}</pre>
-    </code>
-    <code>
-        <pre>Form value: {{ newUserForm.status | json }}</pre>
-    </code>
+    <!--<code>-->
+        <!--<pre>Form value: {{ newUserForm.value | json }}</pre>-->
+    <!--</code>-->
+    <!--<code>-->
+        <!--<pre>Form value: {{ newUserForm.status | json }}</pre>-->
+    <!--</code>-->
 
 </form>
