--- a/src/app/components/admin/admin.component.html
+++ b/src/app/components/admin/admin.component.html
@@ -1,5 +1,9 @@
 <!-- * ADMIN * -->
 <ddw-admin-navbar></ddw-admin-navbar>
-<h3>Admin Dashboard</h3>
+<div class="row mt-3">
+    <div class="container">
+        <h3>Admin Dashboard</h3>
+    </div>
+</div>
 
 <router-outlet></router-outlet>
