--- a/src/app/components/admin/admin-user/admin-user.component.html
+++ b/src/app/components/admin/admin-user/admin-user.component.html
@@ -1,15 +1,10 @@
-<h2>Users</h2>
-<div class="container-fluid">
-    <div class="row">
-        <div class="col-md-6">
-            <p>Click user to edit, or
-                <button class="btn btn-outline-primary btn-sm"
-                        [routerLink]="['new']">Add New User
-                </button>
-            </p>
-        </div>
-        <div class="col-md-6">
-            <router-outlet></router-outlet>
-        </div>
+<div class="row">
+    <div class="container">
+        <h2>Users</h2>
+    </div>
+</div>
+<div class="row">
+    <div class="container">
+        <router-outlet></router-outlet>
     </div>
 </div>
