Can now delete users with a confirm native browser pop-up alert

--- a/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
+++ b/src/app/components/admin/admin-user/admin-user-details/admin-user-details.component.html
@@ -13,7 +13,8 @@
             [routerLink]="['edit']">
                 <i class="fa fa-pencil"></i>&nbsp;Edit
             </a>
-            <button class="btn btn-danger btn-sm">
+            <button class="btn btn-danger btn-sm"
+            (click)="onDeleteUser()">
                 <i class="fa fa-trash"></i>&nbsp;Delete
             </button>
         </div>
