--- a/src/app/components/admin/admin-core/admin-signup/admin-signup.component.html
+++ b/src/app/components/admin/admin-core/admin-signup/admin-signup.component.html
@@ -1,3 +1,78 @@
-<p>
-  admin-signup works!
-</p>
+<div class="row mb-5 mt-5">
+    <div class="col-md-6 mx-auto">
+        <div class="card">
+            <div class="card-body">
+                <h1 class="text-center text-secondary pb-4 pt-3">
+                    <span class="text-dark">
+               <img src="https://higherlogicdownload.s3.amazonaws.com/GASTRO/44b1f1fd-aaed-44c8-954f-b0eaea6b0462/UploadedImages/ddw-color.png"
+                    alt="ddw logo" class="ddw-logo" style="max-width:200px;"> <br>
+                        <i class="fa fa-user-lock"></i>&nbsp;Admin
+                    </span> Signup
+                </h1>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div class="row">
+    <div class="container">
+        <div class="col-md-8 offset-md-2 col-sm-12 offset-sm-0">
+            <div class="card">
+                <div class="card-body">
+                    <!--<h2 class="card-title">Log In</h2>-->
+                    <form [formGroup]="signupForm"
+                          (ngSubmit)="onSignup(signupForm.value)">
+                        <div class="form-group">
+                            <label>Email address <span class="text-danger">*</span></label>
+                            <input type="email"
+                                   class="form-control"
+                                   required
+                                   formControlName="email">
+                        </div>
+
+                        <div class="form-group">
+                            <label>Password <span class="text-danger">*</span></label>
+                            <input type="password"
+                                   class="form-control"
+                                   required
+                                   formControlName="password">
+                        </div>
+
+
+                        <div class="form-group">
+                            <label>Job Title <span class="text-danger">*</span></label>
+                            <input type="text"
+                                   class="form-control"
+                                   required
+                                   formControlName="title">
+                        </div>
+
+
+                        <div class="form-group">
+                            <label>Display Name
+                                <small>(Username)</small>
+                            </label>
+                            <input type="text"
+                                   class="form-control"
+                                   formControlName="displayName">
+                        </div>
+
+
+                        <div class="form-group">
+                            <label>Photo URL <small>(Default included)</small></label>
+                            <input type="text"
+                                   class="form-control"
+                                   formControlName="photoURL">
+                        </div>
+
+                        <button type="submit"
+                                class="btn btn-primary"><i class="fa fa-paper-plane"></i>&nbsp;Signup
+                        </button>
+
+                        <p class="mt-3 text-right"><small><span class="text-danger">*</span> Required</small></p>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
