--- a/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
@@ -14,18 +14,22 @@
     <ul class="navbar-nav mx-auto">
         <li class="nav-item" *ngIf="!isLoggedIn">
             <a class="nav-link"
-               href="#"><i class="fa fa-sign-in-alt"></i>&nbsp;log In</a>
+               [routerLink]="['/admin/login']">
+                <i class="fa fa-sign-in-alt"></i>&nbsp;log In
+            </a>
         </li>
         <!-- * TODO: Need to get uid when user is added to db on signup * -->
         <li class="nav-item" *ngIf="isLoggedIn">
             <a class="nav-link"
-               [routerLink]="['/admin/users/', loggedInUser.uid]"
-            ><i class="fa fa-user-alt"></i>&nbsp;{{ loggedInUser }}</a>
+               [routerLink]="['/admin/users/', loggedInUser.uid]">
+                <i class="fa fa-user-alt"></i>&nbsp;{{ loggedInUser }}
+            </a>
         </li>
         <li class="nav-item" *ngIf="isLoggedIn">
             <a class="nav-link"
                style="cursor:pointer;"
-               (click)="onLogout()"><i class="fa fa-sign-out-alt"></i>&nbsp;Logout</a>
+               (click)="onLogout()"><i class="fa fa-sign-out-alt"></i>&nbsp;Logout
+            </a>
         </li>
     </ul>
 </nav>
