--- a/src/app/components/admin/admin-core/admin-signup/admin-signup.component.html
+++ b/src/app/components/admin/admin-core/admin-signup/admin-signup.component.html
@@ -59,17 +59,28 @@
 
 
                         <div class="form-group">
-                            <label>Photo URL <small>(Default included)</small></label>
+                            <label>Photo URL
+                                <small>(Default included)</small>
+                            </label>
                             <input type="text"
                                    class="form-control"
                                    formControlName="photoURL">
+                        </div>
+
+                        <div class="form-group form-check">
+                            <input type="checkbox"
+                                   class="form-check-input"
+                                   formControlName="admin">
+                            <label class="form-check-label">Admin User?</label>
                         </div>
 
                         <button type="submit"
                                 class="btn btn-primary"><i class="fa fa-paper-plane"></i>&nbsp;Signup
                         </button>
 
-                        <p class="mt-3 text-right"><small><span class="text-danger">*</span> Required</small></p>
+                        <p class="mt-3 text-right">
+                            <small><span class="text-danger">*</span> Required</small>
+                        </p>
                     </form>
                 </div>
             </div>
