Added general settings page

--- a/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
+++ b/src/app/components/admin/admin-core/admin-navbar/admin-navbar.component.html
@@ -12,6 +12,12 @@
         </div>
     </div>
     <ul class="navbar-nav mx-auto">
+        <li class="nav-item" *ngIf="isLoggedIn && allowSignup">
+            <a class="nav-link"
+               [routerLink]="['/admin/settings']">
+                <i class="fa fa-wrench"></i>&nbsp;Settings
+            </a>
+        </li>
         <li class="nav-item" *ngIf="!isLoggedIn && allowSignup">
             <a class="nav-link"
                [routerLink]="['/admin/signup']">
@@ -27,7 +33,7 @@
         <!-- * TODO: Need to get uid when user is added to db on signup * -->
         <li class="nav-item" *ngIf="isLoggedIn">
             <a class="nav-link"
-               [routerLink]="['/admin/users/', loggedInUser.uid]">
+               [routerLink]="['/admin/users/', uid]">
                 <i class="fa fa-user-alt"></i>&nbsp;{{ loggedInUser }}
             </a>
         </li>
