Got routing and modules working. Site renders on page

--- a/src/app/components/admin/admin-page/admin-page.component.html
+++ b/src/app/components/admin/admin-page/admin-page.component.html
@@ -1,2 +1,13 @@
-<!-- * PAGES * -->
-<router-outlet></router-outlet>
+<div class="row">
+    <div class="container">
+        <h2>Pages</h2>
+        <button class="btn btn-outline-primary btn-sm mb-3"
+                [routerLink]="['new']">Add New Page
+        </button>
+    </div>
+</div>
+<div class="row">
+    <div class="container">
+        <router-outlet></router-outlet>
+    </div>
+</div>
