--- a/src/app/components/admin/admin-page/admin-page.component.html
+++ b/src/app/components/admin/admin-page/admin-page.component.html
@@ -2,7 +2,7 @@
     <div class="container">
         <h2>Pages</h2>
         <button class="btn btn-outline-primary btn-sm mb-3"
-                [routerLink]="['new']">Add New Page
+                [routerLink]="['new']"><i class="fa fa-file-plus"></i>&nbsp; New Page
         </button>
     </div>
 </div>
